WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210809
Fix for remoteParentObject and platformWidget not being stored properly in the AXIsolatedObject attributes variant.
https://bugs.webkit.org/show_bug.cgi?id=210809
Summary
Fix for remoteParentObject and platformWidget not being stored properly in th...
Andres Gonzalez
Reported
2020-04-21 11:43:58 PDT
Fix for remoteParentObject and platformWidget not being stored properly in the AXIsolatedObject attributes variant.
Attachments
Patch
(7.86 KB, patch)
2020-04-21 11:49 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-04-21 11:49:48 PDT
Created
attachment 397100
[details]
Patch
chris fleizach
Comment 2
2020-04-21 11:52:10 PDT
Comment on
attachment 397100
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=397100&action=review
> Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:908 > + PlatformWidget m_platformWidget;
Is PlatformWidget typedef to RetainPtr<NSView> already? can we move that out of the #if and share the same line?
Andres Gonzalez
Comment 3
2020-04-21 12:05:33 PDT
(In reply to chris fleizach from
comment #2
)
> Comment on
attachment 397100
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=397100&action=review
> > > Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:908 > > + PlatformWidget m_platformWidget; > > Is PlatformWidget typedef to RetainPtr<NSView> already? can we move that out > of the #if and share the same line?
It is a HWND on Windows and a void* on GTK. Since this is not implemented in any other platform, I could remove the declaration from the other platforms, but thought that it might be a hint for future implementations.
EWS
Comment 4
2020-04-21 13:21:09 PDT
Committed
r260448
: <
https://trac.webkit.org/changeset/260448
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397100
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-04-21 13:22:16 PDT
<
rdar://problem/62127479
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug